--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ logging.level.root=info
 
 #mybatis
 #mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.mapper-locations=classpath:mapper/*/*Mapper.xml
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.type-aliases-package=com.jinxiang.user_role_system.pojo
