--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -1,11 +1,11 @@
 
 server.port=11180
 #数据库url
-spring.datasource.url=jdbc:mysql://www.chlang0508.club:3306/UserRoleSystem
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserRoleSystem
 ##用户名
 spring.datasource.username=cl
 ##密码
-spring.datasource.password=sihuoliunian*00
+spring.datasource.password=7788
 ##驱动名
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##redis配置
