跨域请求处理，登录接口重写，开始自定义登录过滤

--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -27,3 +27,6 @@ spring.redis.jedis.pool.max-wait=100
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=1000
+
+##签名秘钥
+signature.secretKey=secretKey
