--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -29,4 +29,6 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=1000
 
 ##签名秘钥
-signature.secretKey=secretKey
+jwt.signature.secretKey=secretKey
+##签发者
+jwt.signature.issuer=jinxiang
