Dao层代码重生成

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,4 @@ logging:
     root: info
 
 mybatis-plus:
-  config-location: classpath:mapper/*Mapper.xml
+  config-location: classpath:mapper/*Dao.xml
