Dao层代码重构，下一步重构为MybatisPlus

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>@</delimiters>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                </configuration>
+            </plugin>
 
 <!--            <plugin>-->
 <!--                <groupId>org.mybatis.generator</groupId>-->
