--- a/src/main/resources/application-localhost.yml
+++ b/src/main/resources/application-localhost.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/UserRoleSystem
-    username: cl
+    username: root
     password: 7788
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
